# mmux_lib

mmux/: CMakeLists.txt  mmux.c
mmux/include/: mmux.h  mmux_priv.h
tests/mmux_serial_output/: CMakeLists.txt
tests/mmux_serial_output/main/: main.c
